--- a/src/style.css
+++ b/src/style.css
@@ -23,10 +23,19 @@ body {
 }
 
 main {
-  max-width: 768px;
+  max-width: 868px;
   margin: auto;
   display: flex;
   flex-direction: column;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  list-style-type: none;
 }
 
 #search-input {
@@ -65,4 +74,14 @@ main {
   padding: var(--spacing);
   margin-top: calc(var(--spacing) * 2);
   margin-bottom: calc(var(--spacing) * 2);
+}
+
+#bb {
+  display: flex;
+}
+
+#favorites {
+  margin-left: calc(var(--spacing) * 2);
+  padding-left: calc(var(--spacing) * 2);
+  border-left: var(--dark) solid 1px;
 }
