--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,10 @@ ul {
 
 li {
   list-style-type: none;
+  margin-top: var(--spacing);
+  margin-bottom: var(--spacing);
+  padding: var(--spacing);
+  border-radius: var(--borderRadiusSmall);
 }
 
 #search-input {
@@ -84,4 +88,8 @@ li {
   margin-left: calc(var(--spacing) * 2);
   padding-left: calc(var(--spacing) * 2);
   border-left: var(--dark) solid 1px;
+}
+
+#active-link {
+  background-color: var(--blue);
 }
